Attempt to fix mobile overflow bug

--- a/css/index.css
+++ b/css/index.css
@@ -6,9 +6,15 @@
 
 body{
 
-    background-color: #e8e8e8;
+    background-color: #ffffff;
     width: 100%;
-    overflow-x: hidden;
+}
+
+#body-wrapper{
+
+  width: 100%;
+  background: #e8e8e8;
+  overflow-x: hidden;
 }
 
 /*
